Bug 1163435 part 1 - [css-grid][css-flexbox] Propagate an explicit CB width/height to the reflow state to resolve percentage lengths for grid items properly.  Resolve percent against the size in the same axis for abs.pos. children too.  r=dholbert

Grid items are supposed to use the size of their 'grid area',
not their grid container, as their containing block.